# recommender-system

grpc-vector-search/: CMakeLists.txt
grpc-vector-search/src/: main-server.cpp  vector-search-grpc.cpp  vector-search-grpc.h
grpc-vector-search/src/proto/: vecsearch.grpc.pb.cc  vecsearch.grpc.pb.h  vecsearch.pb.cc  vecsearch.pb.h
grpc-vector-search/test/: CMakeLists.txt  grpc-client.cpp
init-data/: freelancer.csv  go.mod  main.go  project.csv  sample.csv
par2vec/proto/: par2vec.proto
par2vec/src/: Dockerfile  main.py  par2vec_pb2.py  par2vec_pb2.pyi  par2vec_pb2_grpc.py
par2vec/test/: Dockerfile  comp-sim.py  test-main.py
paragraph-similarity/: compute-paragraph-similarity-bert.py
protos/: par2vec.proto  vecsearch.proto
search-manage/: Dockerfile  freelancers.go  go.mod  go.sum  main.go  par2vec-client.go  project.go  readme-proto-file-gen.txt  search.go  vecsearch-client.go
search-manage/docs/: docs.go  swagger.json  swagger.yaml
search-manage/proto/: par2vec.pb.go  par2vec.proto  par2vec_grpc.pb.go
search-manage/proto-vecsearch/: vecsearch.pb.go  vecsearch.proto  vecsearch_grpc.pb.go
table-to-index/: CMakeLists.txt
table-to-index/src/: main.cpp  par2vec-grpc-client.h  vector-search-grpc-client.h
table-to-index/src/proto/: par2vec.grpc.pb.cc  par2vec.grpc.pb.h  par2vec.pb.cc  par2vec.pb.h  vecsearch.grpc.pb.cc  vecsearch.grpc.pb.h  vecsearch.pb.cc  vecsearch.pb.h
vector-search-engine/: CMakeLists.txt
vector-search-engine/src/: vector-search.cpp  vector-search.h
vector-search-engine/test/mysql/: CMakeLists.txt  mysql-test.cpp
vector-search-engine/test/uuid/: test-uuid.cpp
vector-search-engine/test/vector-search/: vector-search-test.cpp
